# squirrel

./: .gitignore  Cargo.toml  bless.py  old_compiler.rs  readme.md  sq_expect.py  test.nut
squirrel_lang/: Cargo.toml  justfile  test.nut
squirrel_lang/src/: context.rs  lexer.rs  lib.rs  test_macro.rs  test_util.rs  util.rs
squirrel_lang/src/parser/: ast.rs  lexer.rs  mod.rs  pratt.rs
squirrel_lang/src/runtime/: argparse.rs  builtins.rs  bytecode.rs  compiler.rs  mod.rs  sqrc.rs  value.rs  walker.rs
squirrel_lang/src/snapshots/: squirrel_lang__lexer__tests__lexer-edge_cases-class_modify.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-closure_root.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-closure_this.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-default_args.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-delete.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-delete_to_root.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-freed_locals.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-func_env.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-inherit_env.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-iteration.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-lost_env.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-meta_order.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-overwriting_scope.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-parent_scope.nut.snap  squirrel_lang__lexer__tests__lexer-edge_cases-root_delegate.nut.snap  (+35 more)
squirrel_lang/src/vm/: error.rs  (+4 more)
(+406 files in other folders)
