[package]
name = "squirrel_lang"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.19"
logos = "0.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ariadne = "0.4.1"
strum_macros = "0.26.4"
# anymap = "0.12"
# log = "0.4"
# pad-adapter = "0.1"


[dev-dependencies]
simple_logger = { version = "1.6", features = ["colored"] }
serde_json = "1.0"
