[package]
name = "squirrel_lang"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2021"

[dependencies]
once_cell = "1.19"
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
ariadne = "0.4.1"
strum_macros = "0.26.4"
hashbrown = "0.14.5"
pad-adapter = "0.1"
num-traits = "0.2.19"
# anymap = "0.12"
# log = "0.4"


[dev-dependencies]
# simple_logger = { version = "1.6", features = ["colored"] }
serde_json = "1.0"
insta = { version = "1.39.0", features = ["yaml", "redactions", "filters"] }